update the clusters average calculations

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -248,9 +248,15 @@
     "# create a function that computes the cosine similarity between two embeddings\n",
     "def create_cos_sim_df(df_of_embeddings):\n",
     "    \n",
+    "    embeddings_dict = {}\n",
+    "    \n",
     "    # (1) Convert string representations of lists to actual lists\n",
     "    df_of_embeddings['embedding'] = df_of_embeddings['embedding'].apply(json.loads)\n",
     "\n",
+    "    # store embeddings in a dict:\n",
+    "    for idx, row in df_of_embeddings.iterrows():\n",
+    "        embeddings_dict[row['bundleId']] = row['embedding']\n",
+    "        \n",
     "    # (2) Initialize a matrix to store cosine similarities\n",
     "    num_embeddings = len(df_of_embeddings)\n",
     "    cos_sim_matrix = np.zeros((num_embeddings, num_embeddings)) \n",
@@ -264,9 +270,9 @@
     "    # (4) reate DataFrame for cosine similarity matrix\n",
     "    cos_sim_df = pd.DataFrame(cos_sim_matrix, columns=df_of_embeddings['bundleId'], index=df_of_embeddings['bundleId'])\n",
     "\n",
-    "    return cos_sim_df\n",
+    "    return cos_sim_df,embeddings_dict\n",
     "\n",
-    "cos_sim_df = create_cos_sim_df(df_of_embeddings)"
+    "cos_sim_df,embeddings_dict = create_cos_sim_df(df_of_embeddings)"
    ]
   },
   {
@@ -382,13 +388,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fe40bc8",
+   "cell_type": "markdown",
+   "id": "cfe6b489",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 4a. Split the data into training, validation and test sets"
+    "# 4a. Split the data into training, validation and test sets\n"
    ]
   },
   {
@@ -502,7 +506,6 @@
     "    # Further split the temporary set into 70% training and 10% validation sets\n",
     "    X_train, X_val = train_test_split(X_train_temp, test_size=0.125, random_state=42)\n",
     "\n",
-    "    print(X_train)\n",
     "    # move the validation and test apps to the validation and test sets\n",
     "    # Filter records associated with validation apps from the training set\n",
     "    train_data_validation_apps = X_train[X_train['bundleId'].isin(validation_apps)]\n",
@@ -520,9 +523,9 @@
     "    X_test = X_test.sample(frac=1, random_state=42)\n",
     "\n",
     "    # Extract the target \n",
-    "    y_train = X_train.pop('bidFloorPrice')\n",
-    "    y_val = X_val.pop('bidFloorPrice')\n",
-    "    y_test = X_test.pop('bidFloorPrice')\n",
+    "    y_train = X_train.pop('sentPrice')\n",
+    "    y_val = X_val.pop('sentPrice')\n",
+    "    y_test = X_test.pop('sentPrice')\n",
     "\n",
     "    # Calculate the proportion of each set\n",
     "    train_proportion = len(X_train) / len(df)\n",
@@ -543,7 +546,7 @@
     "\n",
     "# Select specific columns for training\n",
     "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
-    "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df[columns_to_use],validation_apps, test_apps)"
+    "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df,columns_to_use,validation_apps, test_apps)"
    ]
   },
   {
@@ -610,45 +613,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now, lets create clusters of the embeddings\n",
     "\n",
-    "def cluster_apps_by_similarity(cos_sim_df,apps_to_exclude = []):\n",
-    "\n",
-    "    treshold_for_similarity = 0.7\n",
+    "def cluster_apps_by_similarity(cos_sim_df, apps_to_exclude, df_of_embeddings):\n",
+    "    threshold_for_similarity = 0.7\n",
     "    \n",
+    "    # Filter rows and columns based on the apps to exclude\n",
+    "    # cos_sim_df = cos_sim_df.drop(columns=apps_to_exclude, index=apps_to_exclude)\n",
+    "\n",
     "    clusters = {}  # Dict to store clusters\n",
-    "    cluster_counter = 0  # Counter for cluster numbers\n",
-    "\n",
-    "    # filter rows and columns based on the apps to exclude\n",
-    "    cos_sim_df = cos_sim_df.drop(columns=apps_to_exclude, index=apps_to_exclude)\n",
-    "\n",
+    "    cluster_num = 0\n",
+    "    checked_apps = []\n",
     "    for current_app, row in cos_sim_df.iterrows():\n",
-    "\n",
-    "        if any(current_app in apps for apps in clusters.values()):\n",
+    "        if current_app in checked_apps:\n",
     "            continue\n",
-    "            \n",
-    "        # Find the column (app name) with the highest value in the current row\n",
+    "        \n",
     "        max_similarity_app = row.idxmax()\n",
-    "        \n",
-    "        # Check if the app with the highest similarity is already in a cluster\n",
-    "        assigned_cluster = None\n",
-    "        for cluster_num, apps_in_cluster in clusters.items():\n",
-    "            if max_similarity_app in apps_in_cluster:\n",
-    "                assigned_cluster = cluster_num\n",
-    "                break\n",
-    "        \n",
-    "        # If the app is already in a cluster, assign the current app to the same cluster\n",
-    "        # Otherwise, create a new cluster with both apps\n",
-    "        if assigned_cluster is not None:\n",
-    "            clusters[assigned_cluster].append(current_app)\n",
-    "        else:\n",
-    "            cluster_counter += 1\n",
-    "            clusters[cluster_counter] = [max_similarity_app, current_app]\n",
+    "        max_similarity_value = row.max()\n",
     "\n",
+    "        if max_similarity_value >= threshold_for_similarity:\n",
+    "            # Check if the app with the highest similarity is already in a cluster\n",
+    "            assigned_cluster = None\n",
+    "            for c_num, cluster_data in clusters.items():\n",
+    "                if max_similarity_app in cluster_data['apps']:\n",
+    "                    assigned_cluster = c_num\n",
+    "                    break\n",
+    "            \n",
+    "            # Add the current app to the cluster\n",
+    "            if assigned_cluster is not None:\n",
+    "                clusters[assigned_cluster]['apps'].append(current_app)\n",
+    "                checked_apps.append(current_app)\n",
+    "            \n",
+    "            # Create a new cluster\n",
+    "            if assigned_cluster is None:\n",
+    "                cluster_num += 1\n",
+    "                clusters[cluster_num] = {'apps': [current_app, max_similarity_app]}\n",
+    "                checked_apps.extend([current_app, max_similarity_app])\n",
+    "                \n",
+    "\n",
+    "    for c_num, cluster_data in clusters.items():\n",
+    "        apps_in_cluster = cluster_data['apps']\n",
+    "        \n",
+    "        # Get embeddings for apps in the cluster from the embeddings_dict\n",
+    "        cluster_embeddings = [embeddings_dict[app] for app in apps_in_cluster]\n",
+    "        \n",
+    "        # Calculate the average embedding for the cluster\n",
+    "        cluster_data['average_embedding'] = np.mean(cluster_embeddings, axis=0)\n",
     "    return clusters\n",
-    "apps_to_exclude = validation_apps + test_apps\n",
     "\n",
-    "cluster_apps_by_similarity(cos_sim_df,apps_to_exclude)"
+    "apps_to_exclude = validation_apps + test_apps\n",
+    "clusters = cluster_apps_by_similarity(cos_sim_df,apps_to_exclude,df_of_embeddings)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c4b8a3",
+   "metadata": {},
+   "source": [
+    "# Create one hot encoding for each cluster"
    ]
   },
   {
@@ -657,7 +678,24 @@
    "id": "3bac2f20",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Select the best cluster for the apps which are not in the clusters\n",
+    "# If their similarity is not high enough to be in a cluster, than they will not belong to any cluster \n",
+    "for app in apps_to_exclude:\n",
+    "    # Get embedding for the app\n",
+    "    app_embedding = df_of_embeddings[df_of_embeddings['bundleId'] == app]['embedding'].values[0]\n",
+    "\n",
+    "    # Calculate cosine similarity with average embeddings of each cluster\n",
+    "    similarities = {}\n",
+    "    for cluster_num, cluster_data in clusters.items():\n",
+    "        cluster_embedding = cluster_data['average_embedding']\n",
+    "        similarity = cosine_similarity([app_embedding], [cluster_embedding])[0][0]\n",
+    "        similarities[cluster_num] = similarity\n",
+    "\n",
+    "    # Assign the app to the cluster with the highest cosine similarity\n",
+    "    max_similarity_cluster = max(similarities, key=similarities.get)\n",
+    "    clusters[max_similarity_cluster]['apps'].append(app)"
+   ]
   },
   {
    "cell_type": "markdown",
