update matching embedding function

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -679,17 +679,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select the best cluster for the apps which are not in the clusters\n",
-    "# If their similarity is not high enough to be in a cluster, than they will not belong to any cluster \n",
+    "# Select the best cluster for the apps which were assigned to the test and validation sets\n",
     "for app in apps_to_exclude:\n",
     "    # Get embedding for the app\n",
-    "    app_embedding = df_of_embeddings[df_of_embeddings['bundleId'] == app]['embedding'].values[0]\n",
-    "\n",
+    "    current_app_embedding = embeddings_dict[app] \n",
     "    # Calculate cosine similarity with average embeddings of each cluster\n",
     "    similarities = {}\n",
     "    for cluster_num, cluster_data in clusters.items():\n",
     "        cluster_embedding = cluster_data['average_embedding']\n",
-    "        similarity = cosine_similarity([app_embedding], [cluster_embedding])[0][0]\n",
+    "        similarity = cosine_similarity([current_app_embedding], [cluster_embedding])[0][0]\n",
     "        similarities[cluster_num] = similarity\n",
     "\n",
     "    # Assign the app to the cluster with the highest cosine similarity\n",
