create one hot encoding

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -669,7 +669,7 @@
    "id": "69c4b8a3",
    "metadata": {},
    "source": [
-    "# Create one hot encoding for each cluster"
+    "# Assign new apps to the existing"
    ]
   },
   {
@@ -679,20 +679,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select the best cluster for the apps which were assigned to the test and validation sets\n",
-    "for app in apps_to_exclude:\n",
-    "    # Get embedding for the app\n",
-    "    current_app_embedding = embeddings_dict[app] \n",
-    "    # Calculate cosine similarity with average embeddings of each cluster\n",
-    "    similarities = {}\n",
-    "    for cluster_num, cluster_data in clusters.items():\n",
-    "        cluster_embedding = cluster_data['average_embedding']\n",
-    "        similarity = cosine_similarity([current_app_embedding], [cluster_embedding])[0][0]\n",
-    "        similarities[cluster_num] = similarity\n",
     "\n",
-    "    # Assign the app to the cluster with the highest cosine similarity\n",
-    "    max_similarity_cluster = max(similarities, key=similarities.get)\n",
-    "    clusters[max_similarity_cluster]['apps'].append(app)"
+    "def assign_apps_to_clusters(apps_to_exclude, clusters, embeddings_dict):\n",
+    "    # Select the best cluster for the apps which were assigned to the test and validation sets\n",
+    "    for app in apps_to_exclude:\n",
+    "        # Get embedding for the app\n",
+    "        current_app_embedding = embeddings_dict[app] \n",
+    "        # Calculate cosine similarity with average embeddings of each cluster\n",
+    "        similarities = {}\n",
+    "        for cluster_num, cluster_data in clusters.items():\n",
+    "            cluster_embedding = cluster_data['average_embedding']\n",
+    "            similarity = cosine_similarity([current_app_embedding], [cluster_embedding])[0][0]\n",
+    "            similarities[cluster_num] = similarity\n",
+    "\n",
+    "        # Assign the app to the cluster with the highest cosine similarity\n",
+    "        max_similarity_cluster = max(similarities, key=similarities.get)\n",
+    "        clusters[max_similarity_cluster]['apps'].append(app)\n",
+    "    \n",
+    "    return clusters\n",
+    "\n",
+    "clusters = assign_apps_to_clusters(apps_to_exclude, clusters, embeddings_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7c1bb59",
+   "metadata": {},
+   "source": [
+    "# Create one hot encoding for each cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ea3d3db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_one_hot_encoding(df, clusters):\n",
+    "    \n",
+    "    # iterate over the clusters and create one-hot encoding for the apps\n",
+    "    for cluster_num, cluster_data in clusters.items():\n",
+    "        cluster_apps = cluster_data['apps'] # get the apps in the cluster\n",
+    "        cluster_name = f'cluster_{cluster_num}' # create the cluster name\n",
+    "        df[cluster_name] = 0 # initialize the column with zeros\n",
+    "        df.loc[df['bundleId'].isin(cluster_apps), cluster_name] = 1 # assign 1 to the apps in the cluster\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "df = create_one_hot_encoding(df, clusters)"
    ]
   },
   {
