train a new model

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -614,11 +614,11 @@
    "outputs": [],
    "source": [
     "\n",
-    "def cluster_apps_by_similarity(cos_sim_df, apps_to_exclude, df_of_embeddings):\n",
+    "def cluster_apps_by_similarity(cos_sim_df, apps_to_exclude):\n",
     "    threshold_for_similarity = 0.7\n",
     "    \n",
     "    # Filter rows and columns based on the apps to exclude\n",
-    "    # cos_sim_df = cos_sim_df.drop(columns=apps_to_exclude, index=apps_to_exclude)\n",
+    "    cos_sim_df = cos_sim_df.drop(columns=apps_to_exclude, index=apps_to_exclude)\n",
     "\n",
     "    clusters = {}  # Dict to store clusters\n",
     "    cluster_num = 0\n",
@@ -661,7 +661,7 @@
     "    return clusters\n",
     "\n",
     "apps_to_exclude = validation_apps + test_apps\n",
-    "clusters = cluster_apps_by_similarity(cos_sim_df,apps_to_exclude,df_of_embeddings)\n"
+    "clusters = cluster_apps_by_similarity(cos_sim_df,apps_to_exclude)\n"
    ]
   },
   {
@@ -725,9 +725,36 @@
     "        df[cluster_name] = 0 # initialize the column with zeros\n",
     "        df.loc[df['bundleId'].isin(cluster_apps), cluster_name] = 1 # assign 1 to the apps in the cluster\n",
     "\n",
-    "    return df\n",
+    "        # return also a list of cluster_name\n",
+    "        cluster_names = [f'cluster_{cluster_num}' for cluster_num in clusters.keys()]\n",
+    "    \n",
+    "    return df,cluster_names\n",
     "\n",
-    "df = create_one_hot_encoding(df, clusters)"
+    "df,cluster_names = create_one_hot_encoding(df, clusters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aea1b5e0",
+   "metadata": {},
+   "source": [
+    "# Train a model based on the clusters\n",
+    "Let's repeat the train, test, validation process. This time adding the clusters one hot encoding features \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "567ad6b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split the data \n",
+    "columns_to_use = columns_to_use.extend(cluster_names)\n",
+    "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df,columns_to_use,validation_apps,test_apps)\n",
+    "\n",
+    "# train the model\n",
+    "model, training_rmse, val_rmse, test_rmse = train_model(X_train, X_val, X_test, y_train, y_val, y_test)\n"
    ]
   },
   {
