train a new model

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -754,7 +754,7 @@
     "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df,columns_to_use,validation_apps,test_apps)\n",
     "\n",
     "# train the model\n",
-    "model, training_rmse, val_rmse, test_rmse = train_model(X_train, X_val, X_test, y_train, y_val, y_test)\n"
+    "model, training_rmse, val_rmse, test_rmse = train_model(X_train, X_val, X_test, y_train, y_val, y_test)"
    ]
   },
   {
