update the clustering function

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -431,7 +431,7 @@
    "id": "5b41b894",
    "metadata": {},
    "source": [
-    "# 4.b Randomly assign 2 unique apps for the validation and 2 for the testing"
+    "# 4.b Randomly assign 2 unique apps for the validation and 2 for the testing\n"
    ]
   },
   {
@@ -487,7 +487,7 @@
    "id": "4f8f304d",
    "metadata": {},
    "source": [
-    "# 4.c Split data for training, validationa and testing"
+    "# 4.c Split data for training, validationa and testing\n"
    ]
   },
   {
@@ -554,7 +554,7 @@
    "id": "476a6001",
    "metadata": {},
    "source": [
-    "# Train the XGBOOST model without considering the apps' embeddings"
+    "# Train the XGBOOST model without considering the apps' embeddings\n"
    ]
   },
   {
@@ -603,7 +603,7 @@
    "id": "3583f199",
    "metadata": {},
    "source": [
-    "# 4.d - Clustering the apps' embedding"
+    "# 4.d - Clustering the apps' embedding\n"
    ]
   },
   {
@@ -619,7 +619,6 @@
     "    \n",
     "    # Filter rows and columns based on the apps to exclude\n",
     "    cos_sim_df = cos_sim_df.drop(columns=apps_to_exclude, index=apps_to_exclude)\n",
-    "\n",
     "    clusters = {}  # Dict to store clusters\n",
     "    cluster_num = 0\n",
     "    checked_apps = []\n",
@@ -648,6 +647,11 @@
     "                cluster_num += 1\n",
     "                clusters[cluster_num] = {'apps': [current_app, max_similarity_app]}\n",
     "                checked_apps.extend([current_app, max_similarity_app])\n",
+    "        else: \n",
+    "            cluster_num += 1\n",
+    "            clusters[cluster_num] = {'apps': [current_app]}\n",
+    "            checked_apps.append(current_app)  \n",
+    "\n",
     "                \n",
     "\n",
     "    for c_num, cluster_data in clusters.items():\n",
@@ -661,7 +665,8 @@
     "    return clusters\n",
     "\n",
     "apps_to_exclude = validation_apps + test_apps\n",
-    "clusters = cluster_apps_by_similarity(cos_sim_df,apps_to_exclude)\n"
+    "clusters = cluster_apps_by_similarity(cos_sim_df,apps_to_exclude)\n",
+    "print(clusters)"
    ]
   },
   {
@@ -669,7 +674,7 @@
    "id": "69c4b8a3",
    "metadata": {},
    "source": [
-    "# Assign new apps to the existing"
+    "# Assign new apps to the existing\n"
    ]
   },
   {
@@ -706,7 +711,7 @@
    "id": "c7c1bb59",
    "metadata": {},
    "source": [
-    "# Create one hot encoding for each cluster"
+    "# Create one hot encoding for each cluster\n"
    ]
   },
   {
@@ -739,7 +744,8 @@
    "metadata": {},
    "source": [
     "# Train a model based on the clusters\n",
-    "Let's repeat the train, test, validation process. This time adding the clusters one hot encoding features \n"
+    "\n",
+    "Let's repeat the train, test, validation process. This time adding the clusters one hot encoding features\n"
    ]
   },
   {
@@ -759,14 +765,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0821182c",
+   "metadata": {},
+   "source": [
+    "# (5) Results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "532e13d1",
+   "metadata": {},
+   "source": [
+    "# (6) Testing the contribution of additional features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "082eb8d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's create more feature based on the unitDisplayType, countryCode and osAndVersion\n",
+    "# first let's count the amount of unique values for each of these columns\n",
+    "print(\"Unique values for unitDisplayType: \", len(df['unitDisplayType'].unique()))\n",
+    "print(\"Unique values for countryCode: \", len(df['countryCode'].unique()))\n",
+    "print(\"Unique values for osAndVersion: \", len(df['osAndVersion'].unique()))\n",
+    "\n",
+    "# Let's create a function that will create one-hot encoding for these columns\n",
+    "def create_one_hot_encoding(df, columns):\n",
+    "    for column in columns:\n",
+    "        one_hot = pd.get_dummies(df[column], prefix=column)\n",
+    "        df = df.drop(column, axis = 1) # drop the original column\n",
+    "        df = df.join(one_hot)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4e3ccad",
    "metadata": {},
    "source": [
     "(7) Conclusions\n",
     "It was found that ...\n",
-    "* It's worth examining additional models except XGBOOST\n",
-    "* Maybe the threshold of clustering the embeding wasn't high enough\n",
-    "* Maybe I should use a different method which is not rely on embedings"
+    "\n",
+    "- It's worth examining additional models except XGBOOST\n",
+    "- Maybe the threshold of clustering the embeding wasn't high enough\n",
+    "- Maybe I should use a different method which is not rely on embedings\n"
    ]
   }
  ],
