--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -703,7 +703,8 @@
     "    \n",
     "    return clusters\n",
     "\n",
-    "clusters = assign_apps_to_clusters(apps_to_exclude, clusters, embeddings_dict)"
+    "clusters = assign_apps_to_clusters(apps_to_exclude, clusters, embeddings_dict)\n",
+    "print(clusters)"
    ]
   },
   {
@@ -735,7 +736,8 @@
     "    \n",
     "    return df,cluster_names\n",
     "\n",
-    "df,cluster_names = create_one_hot_encoding(df, clusters)"
+    "df,cluster_names = create_one_hot_encoding(df, clusters)\n",
+    "print(df)"
    ]
   },
   {
@@ -756,6 +758,7 @@
    "outputs": [],
    "source": [
     "# split the data \n",
+    "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
     "columns_to_use = columns_to_use.extend(cluster_names)\n",
     "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df,columns_to_use,validation_apps,test_apps)\n",
     "\n",
@@ -768,7 +771,9 @@
    "id": "0821182c",
    "metadata": {},
    "source": [
-    "# (5) Results\n"
+    "# (5) Results\n",
+    "\n",
+    "It seems like the RMSE of the model without the embeddings information was lower, which questions the contributions of cluster as suggest in the current approach.\n"
    ]
   },
   {
@@ -793,12 +798,54 @@
     "print(\"Unique values for osAndVersion: \", len(df['osAndVersion'].unique()))\n",
     "\n",
     "# Let's create a function that will create one-hot encoding for these columns\n",
-    "def create_one_hot_encoding(df, columns):\n",
-    "    for column in columns:\n",
-    "        one_hot = pd.get_dummies(df[column], prefix=column)\n",
-    "        df = df.drop(column, axis = 1) # drop the original column\n",
-    "        df = df.join(one_hot)\n",
-    "    return df"
+    "# for osAndVersion, let's split it to ios vs android\n",
+    "# for the unitDisplayType, there are only 3 unique values, so we can create one-hot encoding for all of them\n",
+    "# for countryCode, there are many unique values so I will split it to US vs other\n",
+    "\n",
+    "def create_one_hot_encoding(df):\n",
+    "        \n",
+    "        # Create one-hot encoding for unitDisplayType\n",
+    "        df = pd.get_dummies(df, columns=['unitDisplayType'], prefix='unitDisplayType')\n",
+    "    \n",
+    "        # Create one-hot encoding for countryCode\n",
+    "        df['is_US'] = 0\n",
+    "        df.loc[df['countryCode'] == 'US', 'is_US'] = 1\n",
+    "    \n",
+    "        # Create one-hot encoding for osAndVersion\n",
+    "        df['is_ios'] = 0\n",
+    "        df.loc[df['osAndVersion'].str.contains('ios', case=False), 'is_ios'] = 1\n",
+    "\n",
+    "        # collect the one hot encoded columns\n",
+    "        new_features = ['is_US', 'is_ios'] + [col for col in df.columns if 'unitDisplayType' in col]    \n",
+    "\n",
+    "    \n",
+    "        return df,new_features\n",
+    "df,new_features = create_one_hot_encoding(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fa28373",
+   "metadata": {},
+   "source": [
+    "# Training a new model with additional features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f0850ae",
+   "metadata": {},
+   "source": [
+    "# split the data \n",
+    "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
+    "columns_to_use = columns_to_use.extend(cluster_names)\n",
+    "columns_to_use = columns_to_use.extend(new_features)\n",
+    "print(columns_to_use)\n",
+    "\n",
+    "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df,columns_to_use,validation_apps,test_apps)\n",
+    "\n",
+    "# train the model\n",
+    "model, training_rmse, val_rmse, test_rmse = train_model(X_train, X_val, X_test, y_train, y_val, y_test)"
    ]
   },
   {
@@ -807,11 +854,14 @@
    "metadata": {},
    "source": [
     "(7) Conclusions\n",
-    "It was found that ...\n",
+    "* It was found that using clustering for prediciting the target price wasn't effective.\n",
+    "* It was found that adding additinal features\n",
     "\n",
-    "- It's worth examining additional models except XGBOOST\n",
-    "- Maybe the threshold of clustering the embeding wasn't high enough\n",
-    "- Maybe I should use a different method which is not rely on embedings\n"
+    "\n",
+    "Additonal thoughts:\n",
+    "* It's worth examining additional models except XGBOOST\n",
+    "* Maybe the threshold of clustering the embeding wasn't high enough\n",
+    "* Maybe I should use a different method which is not rely on embedings\n"
    ]
   }
  ],
