updating the cell type

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -832,9 +832,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7f0850ae",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba967f24",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# split the data \n",
     "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
@@ -842,6 +844,7 @@
     "columns_to_use = columns_to_use.extend(new_features)\n",
     "print(columns_to_use)\n",
     "\n",
+    "# split the data\n",
     "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df,columns_to_use,validation_apps,test_apps)\n",
     "\n",
     "# train the model\n",
