--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -759,7 +759,7 @@
    "source": [
     "# split the data \n",
     "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
-    "columns_to_use = columns_to_use.extend(cluster_names)\n",
+    "columns_to_use = columns_to_use + cluster_names\n",
     "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df,columns_to_use,validation_apps,test_apps)\n",
     "\n",
     "# train the model\n",
@@ -811,7 +811,7 @@
     "        df['is_US'] = 0\n",
     "        df.loc[df['countryCode'] == 'US', 'is_US'] = 1\n",
     "    \n",
-    "        # Create one-hot encoding for osAndVersion\n",
+    "        # Create one-hot encoding for is ios\n",
     "        df['is_ios'] = 0\n",
     "        df.loc[df['osAndVersion'].str.contains('ios', case=False), 'is_ios'] = 1\n",
     "\n",
@@ -828,7 +828,7 @@
    "id": "5fa28373",
    "metadata": {},
    "source": [
-    "# Training a new model with additional features"
+    "# Training a new model with additional features\n"
    ]
   },
   {
@@ -840,8 +840,7 @@
    "source": [
     "# split the data \n",
     "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
-    "columns_to_use = columns_to_use.extend(cluster_names)\n",
-    "columns_to_use = columns_to_use.extend(new_features)\n",
+    "columns_to_use = columns_to_use + cluster_names + new_features\n",
     "print(columns_to_use)\n",
     "\n",
     "# split the data\n",
@@ -856,15 +855,16 @@
    "id": "d4e3ccad",
    "metadata": {},
    "source": [
-    "(7) Conclusions\n",
-    "* It was found that using clustering for prediciting the target price wasn't effective.\n",
-    "* It was found that adding additinal features\n",
+    "(7) Conclusions:\n",
     "\n",
+    "- It was found that using clustering of embdeddings for prediciting the target price wasn't effective.\n",
+    "- It was found that adding additional features, like unitDisplayType and os version  didn't contribute to reduction in RMSE\n",
     "\n",
     "Additonal thoughts:\n",
-    "* It's worth examining additional models except XGBOOST\n",
-    "* Maybe the threshold of clustering the embeding wasn't high enough\n",
-    "* Maybe I should use a different method which is not rely on embedings\n"
+    "\n",
+    "- It's worth examining additional models except XGBOOST\n",
+    "- Maybe the threshold of clustering the embeding wasn't high enough\n",
+    "- Maybe I should use a different method which is not rely on embedings\n"
    ]
   }
  ],
